--- a/package.json
+++ b/package.json
@@ -85,15 +85,19 @@
     "commands": [
       {
         "command": "phpGettersSetters.insertGetter",
-        "title": "Insert PHP Getter"
+        "title": "Insert pointed PHP Getter"
       },
       {
         "command": "phpGettersSetters.insertSetter",
-        "title": "Insert PHP Setter"
+        "title": "Insert pointed PHP Setter"
       },
       {
         "command": "phpGettersSetters.insertGetterAndSetter",
-        "title": "Insert PHP Getter & Setter"
+        "title": "Insert pointed PHP Getter & Setter"
+      },
+      {
+        "command": "phpGettersSetters.insertAllGetterAndSetter",
+        "title": "Insert all PHP Getter & Setter"
       }
     ],
     "menus": {
@@ -108,6 +112,10 @@
         },
         {
           "command": "phpGettersSetters.insertGetterAndSetter",
+          "when": "editorLangId == php"
+        },
+        {
+          "command": "phpGettersSetters.insertAllGetterAndSetter",
           "when": "editorLangId == php"
         }
       ],
@@ -129,6 +137,12 @@
           "command": "phpGettersSetters.insertGetterAndSetter",
           "alt": "phpGettersSetters.insertGetterAndSetter",
           "group": "0_phpGettersSetters@3"
+        },
+        {
+          "when": "resourceLangId == php",
+          "command": "phpGettersSetters.insertAllGetterAndSetter",
+          "alt": "phpGettersSetters.insertAllGetterAndSetter",
+          "group": "0_phpGettersSetters@4"
         }
       ]
     }
