--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "icon": "images/icon.png",
   "engines": {
-    "vscode": "^1.18.0"
+    "vscode": "^1.63.0"
   },
   "categories": [
     "Other"
@@ -169,13 +169,14 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "postinstall": "node ./node_modules/vscode/bin/install",
-    "test": "npm run compile && node ./node_modules/vscode/bin/test"
+    "pretest": "npm run compile",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
     "@types/mocha": "^2.2.42",
     "@types/node": "^7.0.43",
-    "typescript": "^2.6.1",
-    "vscode": "^1.1.37"
+    "@types/vscode": "^1.63.1",
+    "@vscode/test-electron": "^2.1.1",
+    "typescript": "^2.6.1"
   }
 }
