--- a/.github/workflows/ovsxregistry_release.yml
+++ b/.github/workflows/ovsxregistry_release.yml
@@ -6,6 +6,7 @@ on:
 name: OVSX Registry release
 jobs:
   publish:
+    if: "!github.event.release.prerelease"
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
