--- a/.github/workflows/vsmarketplace_release.yml
+++ b/.github/workflows/vsmarketplace_release.yml
@@ -18,3 +18,4 @@ jobs:
         with:
           pat: ${{ secrets.VSCE_TOKEN }}
           registryUrl: https://marketplace.visualstudio.com
+          preRelease: ${{ github.event.release.prerelease }}
