--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "vscode-php-getters-setters-cv",
+  "name": "vscode-php-getters-setters-phpcs-compliant",
   "displayName": "PHP Getters & Setters (CV fork)",
   "description": "Create PHP getters and setters from class properties",
-  "version": "1.6.1",
+  "version": "1.6.2",
   "publisher": "cvergne",
   "author": "Roberto Segura <roberto@phproberto.com>",
   "contributors": [
-    "Christophe VERGNE <dev@christophevergne.fr>"
+    "Christophe VERGNE <dev@christophevergne.fr>",
+    "Marco Gasi <codingfix@codingfix.com>"
   ],
   "license": "MIT",
   "repository": {
@@ -18,7 +19,7 @@
   },
   "icon": "images/icon.png",
   "engines": {
-    "vscode": "^1.63.0"
+    "vscode": "^1.78.0"
   },
   "categories": [
     "Other"
@@ -31,10 +32,7 @@
     "setters"
   ],
   "activationEvents": [
-    "onLanguage:php",
-    "onCommand:phpGettersSetters.insertGetter",
-    "onCommand:phpGettersSetters.insertSetter",
-    "onCommand:phpGettersSetters.insertGetterAndSetter"
+    "onLanguage:php"
   ],
   "main": "./out/extension",
   "contributes": {
@@ -72,6 +70,11 @@
           "default": true,
           "description": "Enable the PHP 7+ type hints (nullable type in setter, return type in getter)?"
         },
+				"phpGettersSetters.phpcsCompliant": {
+					"type": "boolean",
+					"default": false,
+					"description": "Use phpcs conventions (snake case names, opening braces in the same line of methods declarations, etc)?"
+				},
         "phpGettersSetters.templatesDir": {
           "type": [
             "string",
@@ -169,22 +172,21 @@
     "vscode:prepublish": "npm run compile",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.1",
-    "@types/mocha": "^5.2.6",
-    "@types/node": "^12.12.0",
-    "@types/vscode": "^1.63.1",
-    "@typescript-eslint/eslint-plugin": "^4.16.0",
-    "@typescript-eslint/parser": "^4.16.0",
-    "@vscode/test-electron": "^2.1.1",
-    "eslint": "^7.21.0",
-    "glob": "^7.1.4",
-    "mocha": "^6.1.4",
-    "source-map-support": "^0.5.12",
-    "typescript": "^4.2.2"
-  },
-  "dependencies": {}
+    "@types/vscode": "^1.78.0",
+    "@types/glob": "^8.1.0",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "16.x",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "@typescript-eslint/parser": "^5.59.1",
+    "eslint": "^8.39.0",
+    "glob": "^8.1.0",
+    "mocha": "^10.2.0",
+    "typescript": "^5.0.4",
+    "@vscode/test-electron": "^2.3.0"
+  }
 }
