--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"outDir": "out",
 		"sourceMap": true,
 		"rootDir": "src",
-		"strict": true,
+		"strict": true
 	},
 	"exclude": ["node_modules", ".vscode-test"]
 }
